--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@ body {
 
 .product-item {
     /* flex: .5; */
-    width: 50%;
+    width: 48%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -34,7 +34,12 @@ body {
     cursor: pointer;
 }
 
+.product-item:nth-child(even) {
+    margin-left: 4%;
+}
+
 .product-item img {
+    margin-left: 10px;
     width: 100%;
 }
 
