--- a/css/index.css
+++ b/css/index.css
@@ -20,22 +20,21 @@ body {
 }
 
 .product-service-bottom {
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex;
+    flex-wrap: wrap; */
+    column-count: 2;
+    column-gap: 20px;
 }
 
 .product-item {
     /* flex: .5; */
-    width: 48%;
+    /* width: 48%; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-}
-
-.product-item:nth-child(even) {
-    margin-left: 4%;
+    margin-bottom: 20px;
 }
 
 .product-item img {
