--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,7 @@ body {
     /* display: flex;
     flex-direction: column;
     justify-content: center; */
+    font-size: 30px;
     text-align: center;
     align-items: center;
     cursor: pointer;
